libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-literal.jsonc
//@ run: fail
//@ description: fn/4 literal as a generic should error out
[
  "::kernel::special_form::fn",
  { "#literal": 2 },
  //~^ ERROR expected a tuple or struct for generic parameters
  { "#struct": {} },
  "_",
  { "#literal": 1 }
]
